swagger GetGroupsByUserId
